--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
+    "bootstrap-slider": "^9.8.1",
     "express": "^4.15.3",
+    "material-ui": "^0.18.6",
     "mongoose": "^4.10.5",
     "morgan": "^1.8.2",
     "react": "^15.5.4",
